# playsy_axum

./: .env  .gitignore  Cargo.toml  Settings.toml  readme.md
migrations/: 20240707211834_code_table_create.sql  20240707211925_user_table_create.sql  20240707211933_refresh_token_table_create.sql  20240731003014_announcement.sql  20240731051416_inquery.sql
migrations/trash/: 20240707211834_code_table_create.sql
oh_my_bevy/bevy_wasm_test/: Cargo.toml  build_wasm.sh  readme.md
oh_my_bevy/bevy_wasm_test/src/: main.rs
src/: lib.rs  main.rs  tests.rs  xxx-demo-sample.rs
src/configs/: app_config.rs  app_extensions.rs  app_state.rs  askama_filters.rs  aws.rs  consts.rs  db_config.rs  filters.rs  mod.rs  settings.rs  validator.rs
src/configs/errors/: app_error.rs  auth.rs  mod.rs  user_join.rs
src/configs/etc/: mod.rs  oauth2_naver_client.rs
src/configs/extractors/: claims.rs  database_connection.rs  ext_client_ip.rs  ext_user_info.rs  jwt_keys.rs  mod.rs  redis_connection.rs  validated_form.rs
src/configs/into_responses/: errors.rs
src/configs/middlewares/: auth.rs  etc.rs  mod.rs  test.rs
src/configs/models/: app_state.rs  auth.rs  claims.rs  mod.rs  user_info.rs  ws_state.rs
src/controller/handlers/: mod.rs
src/controller/routes/: about.rs  announcement.rs  auth.rs  board.rs  chat.rs  game.rs  home.rs  inquery.rs  mod.rs  openapi.rs  user.rs
src/errors/: auth.rs
src/extractors/: database_connection.rs  ext_client_ip.rs  ext_user_info.rs  mod.rs  redis_connection.rs  repository.rs  s3_client.rs  validated_form.rs
src/handlers/: auth_api.rs  auth_page.rs  home_page.rs  mod.rs  openapi.rs  test.rs  user_page.rs
src/into_responses/: errors.rs  html_template.rs  mod.rs
src/middlewares/: auth.rs  etc.rs  mod.rs  test.rs
src/models/: auth_result.rs  claims.rs  jwt_keys.rs  mod.rs  test.rs  user_info.rs
src/models/db/: code.rs
src/models/entities/: announcement.rs  code.rs  inquery.rs  mod.rs  refresh_token.rs  sequence.rs  total_count.rs  user.rs
src/models/fn_args/: auth.rs  mod.rs  repo.rs  token.rs
src/models/oauth2/: mod.rs
src/models/request/: auth.rs  inquery.rs  mod.rs  oauth2.rs  pagination.rs  user.rs
src/models/response/: pagination.rs
src/models/traits/: mod.rs  oauth2.rs  validator.rs
src/myconfig/: consts.rs  error.rs  extractors.rs  into_response.rs  middleward.rs  mod.rs
src/repositories/: announcement.rs  email_join_verifications.rs  inquery.rs  mod.rs  refresh_token.rs  tx.rs  user.rs
src/repositories/entities/: code.rs  email_join_verifications.rs  mod.rs  refresh_token.rs  user.rs
src/repositories/enums/: user.rs
src/responses/: errors.rs  html_template.rs
src/routes/: auth.rs  home.rs  mod.rs  openapi.rs  test.rs  user.rs
src/services/: announcement.rs  auth.rs  inquery.rs  mod.rs  user.rs
src/templates/: about.rs  announcement.rs  auth.rs  board.rs  chat.rs  game.rs  home.rs  inquery.rs  mod.rs  user.rs
src/utils/: aws.rs  config.rs  cookie.rs  hash.rs  jwt.rs  mail.rs  mod.rs  oauth2.rs  rand.rs  redis.rs  settings.rs  validator.rs
src/validators/: mod.rs  user.rs
static/css/: tailwind_output.css
static/html/: about.html  announcement.html  announcement_detail.html  board.html  board_detail.html  chat.html  contact.html  error.html  game.html  hello.html  index.html  join.html  login.html  mypage.html  privacy.html  test.html
static/js/: progressive_fetch.js
tailwindcss/: package-lock.json  readme.md  tailwind.config.js
templates/: auth_page.html  hello.html
templates/etc/: email_veri_code.html
templates/fragment_layouts/: join_from_layout.html
templates/fragments/: auth_error.html  auth_fail.html  auth_form.html  content.html  email_verification_error.html  header.html  inquery_success.html  join_form.html  x_join_success.html
templates/layout_fragments/: default_css.html  default_script.html  footer.html
templates/layouts/: layout.html
templates/macros/: buttons.html  inputs.html  macros.html
templates/page_layouts/: auth_layout.html  error_layout.html  main_layout.html
templates/pages/: about.html  auth.html  chat.html  email_verification.html  email_verification_success.html  error.html  home.html  inquery.html  join.html  join_email.html  join_email_success.html  join_social.html  mypage.html  privacy.html  signup.html
(+39 files in other folders)
