[package]
name = "web"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = [
    "oh_my_bevy/bevy_wasm_test"
]

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] } # 쿠키, 헤더추출
time = "0.3.36" # extra Duration 시 사용
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }

futures = "0.3.30"

# 파서
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# 템플릿 엔진
askama = "0.12.1" 

# config 초기화
once_cell = "1.19.0"
config = "0.14.0"

# 로깅
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

# DB
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono", "time"] }
chrono = { version = "0.4", features = ["serde"] }

# open api
utoipa = { version = "4.2.3", features = ["axum_extras"] }

# 유효성 체크
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.5"

# 인증
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
sha2 = "0.10.8"
hex = "0.4.3"
oauth2 = "4.4.2"

# error utill
thiserror = "1.0.61"
anyhow = "1.0.86"

# mail
lettre = "0.11.7"

# auto reload
listenfd = "1.0.1"

# 랜덤
rand = "0.8.5"

# redis
bb8 = "0.8.5"
bb8-redis = "0.15.0"
redis = "0.25.4"

# uuid
uuid = "1.10.0"

# compile time check perf up
[profile.dev.package.sqlx-macros]
opt-level = 3
